<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JuveCyL</string>
    <string name="close_button">Cerrar</string>
    <string name="action_settings">Settings</string>
    <string name="reloadbutton">Descarga los datos</string>
    <string name="imglodging">Imagen del alojamiento</string>
    <string name="favsbutton">Favoritos</string>
    <string name="welcome_first_run">Bienvenido \n a \nJuveCyL</string>
    <string name="thanks_first_run">Gracias por usar nuestra aplicación</string>
    <string name="pull_first_run">¡Desliza!</string>
    <string name="img_first_arrow">Flecha</string>
    <string name="first_run_button">Entendido</string>
    <string name="open_drawer">Desplegar el menú</string>
    <string name="close_drawer">Replegar el menú</string>
    <string name="first_run_got_it">¡Lo tengo!</string>
    <string name="tutorial_title">Tutorial JuveCyL</string>
    <string name="tutorial_message">JuveCyL utiliza el menú lateral desplegable desde el lado izquierdo. Puedes sacarlo arrastrando el dedo desde el margen izquierdo</string>
    <string name="tutorial_message2">También puedes ocultar y mostrar el menú lateral tocando en la parte superior derecha de la barra de acción</string>
    <string name="main_no_results">No se han encontrado resultados</string>
	<string name="coding_no_gmaps">No puedes ver el mapa</string>
    <string name="coding_search">Búsqueda</string>
    <string name="coding_back">Atrás</string>
    <string name="coding_fav">Favorito</string>
    <string name="coding_contact">Contacto</string>
    <string name="coding_phones">Teléfonos</string>
    <string name="coding_db_update">Actualizando la base de datos…</string>
    <string name="coding_db_updated">Base de datos actualizada</string>
    <string name="coding_db_failed">Error en la actualización</string>
    <string name="coding_use_local_data">Usar datos locales</string>
    <string name="coding_retry">Reintentar</string>
    <string name="coding_mails">Correos</string>
    <string name="coding_webs">Webs</string>
    <string name="coding_desc">Descripción</string>
    <string name="coding_loc">Localización</string>
    <string name="coding_send_mail">Contacto vía JuveCyL</string>
    <string name="coding_call_fail">No puedes realizar llamadas desde este dispositivo</string>
    <string name="coding_new_fav_txt">Alojamiento añadido a favoritos</string>
    <string name="coding_del_fav_txt">Alojamiento eliminado de favoritos</string>
    <string name="gps_network_not_enabled">El GPS no está habilitado</string>
    <string name="open_location_settings">Abrir opciones de localización</string>
    <string name="coding_cancel">Cancelar</string>
</resources>