<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/corporativeblue" >

        <TextView
            android:id="@+id/tv_first_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/welcome_first_run"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/big_font" />

        <Button
            android:id="@+id/btn_first_ok"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/first_run_button"/>

        <TextView
            android:id="@+id/tv_first_Thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_first_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/thanks_first_run"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font" />

        <TextView
            android:id="@+id/tv_first_Pull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_first_ok"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/pull_first_run"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/img_first_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_first_ok"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/img_first_arrow"
            android:src="@drawable/arrow" />



    </RelativeLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp">

        </ListView>

</android.support.v4.widget.DrawerLayout>